# GLinker

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  pytest.ini  requirements.txt  run_pipe.py  setup.py
configs/pipelines/: README.md  default.yaml  demo_loose_mode.yaml  demo_no_cache.yaml  demo_onthefly_cache.yaml  demo_with_precompute.yaml  test_l0_simple.yaml
configs/pipelines/dict/: default.yaml  loose_mode.yaml  strict_mode.yaml  with_embeddings.yaml
configs/pipelines/postgres/: default.yaml  with_embeddings.yaml
configs/pipelines/postgres_redis/: default.yaml  with_embeddings.yaml
configs/pipelines/postgres_redis_elasticsearch/: default.yaml
data/: example_mock_db.jsonl  pubmed_texts.txt
docs/: DATABASE_SETUP.md  DOCUMENTATION.md
example/: README.md  clinical_db_demo.ipynb
scripts/: 1_setup_databases.py
scripts/database/: Readme.md  docker-compose.yml  entities.jsonl  jsonl2elasticsearch.py  jsonl2postgresql.py  jsonl2redis.py  setup_all.sh
src/: __init__.py
src/core/: __init__.py  config_loader.py  dag.py  dag_executor.py  database_record.py  factory.py  field_resolver.py  input_config.py  pipe_context.py  pipe_node.py  pipeline.py  registry.py
src/glinker/: __init__.py
src/glinker/core/: __init__.py  base.py  builders.py  dag.py  factory.py  (+1 more)
src/l0/: __init__.py  component.py  models.py  processor.py
src/l1/: __init__.py  component.py  models.py  processor.py
src/l2/: __init__.py  component.py  models.py  processor.py
src/l3/: __init__.py  component.py  models.py  processor.py
tests/: __init__.py  conftest.py
tests/core/: test_base.py  test_config_builder.py  test_dag.py  test_factory.py  test_registry.py
tests/integration/: test_embeddings.py  test_pipeline.py
tests/l0/: __init__.py  test_component.py  test_models.py  test_processor.py
tests/l1/: __init__.py  test_component.py  test_models.py  test_processor.py
tests/l2/: __init__.py  test_component.py  test_models.py  test_processor.py
tests/l3/: __init__.py  test_component.py  test_models.py  test_processor.py
(+19 files in other folders)
