[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glinker"
version = "0.1.1"
description = "GLiNKER - A modular multi-layer entity linking framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Knowledgator", email = "info@knowledgator.com"}
]
keywords = ["entity-linking", "nlp", "gliner", "spacy", "ner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "spacy>=3.7.0",
    "gliner>=0.2.5",
    "torch>=2.0.0",
    "redis>=5.0.0",
    "elasticsearch>=8.11.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
demo = [
    "gradio>=4.0.0",
]
all = [
    "glinker[dev,demo]",
]

[project.urls]
Homepage = "https://github.com/Knowledgator/GLinker"
Repository = "https://github.com/Knowledgator/GLinker"
Documentation = "https://github.com/Knowledgator/GLinker/blob/main/README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["glinker*"]

[tool.setuptools.package-data]
glinker = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=glinker --cov-report=term-missing"
